# vdtreflect

./: CMakeLists.txt  LICENSE  README.md
compiler/: CMakeLists.txt
compiler/source/: directory.cpp  directory.h  encoder.cpp  encoder.h  file_collection.h  main.cpp  parser.cpp  parser.h  string_util.cpp  symbol_table.h  type.cpp  type.h
include/vdtreflect/: enum.h  reflect.h  runtime.h
include/vdtreflex/: reflex.h
samples/sandbox/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  generate.bat  main.cpp  test.h  test_generated.cpp  test_generated.h  vector2.h
sandbox/solution/: test.txt
source/: reflect.cpp  reflex.cpp
